* dropdown menu z-index bug is fixed.

--- a/htdocs/assets/stylesheets/application.css
+++ b/htdocs/assets/stylesheets/application.css
@@ -6987,7 +6987,7 @@ section#main {
 
 /* line 8, form_elements.css.scss */
 form {
-  overflow: hidden;
+  /* overflow: hidden; */
   *zoom: 1; }
 
 /* line 12, form_elements.css.scss */
