--- a/htdocs/assets/stylesheets/form_elements.css
+++ b/htdocs/assets/stylesheets/form_elements.css
@@ -4,7 +4,7 @@
 
 /* line 8, form_elements.css.scss */
 form {
-  overflow: hidden;
+  /* overflow: hidden; */
   *zoom: 1; }
 
 /* line 12, form_elements.css.scss */
